# movieExperta

./: .gitignore  pyproject.toml  url.py
DockerFiles/: docker-compose.demo.yml
app/: app.py  routers.py
app/database/: engine.py  models.py
app/routers/: __init__.py  director.py  movie.py  queries.py
configs/: __init__.py  config.yaml  models.py
database/: models.py
