[tool.poetry]
name = "movieexperta"
version = "0.1.0"
description = ""
authors = ["volodymyrb <volodymyrb@fornova.net>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.70.0"}
beanie = "^1.8.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
